smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/expected-shape-name-but-eof.smithy
// Parse error at line 4, column 7 near `\n`: Expected one or more spaces | Model
namespace com.foo

string
